@@ -26,12 +26,13 @@ import org.elasticsearch.action.ingest.DeletePipelineRequest;
 import org.elasticsearch.action.ingest.PutPipelineRequest;
 import org.elasticsearch.action.support.master.AcknowledgedResponse;
 import org.elasticsearch.action.update.UpdateRequest;
-import org.elasticsearch.client.Client;
-import org.elasticsearch.client.Requests;
+import org.elasticsearch.client.internal.Client;
+import org.elasticsearch.client.internal.Requests;
 import org.elasticsearch.cluster.ClusterChangedEvent;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.AliasMetadata;
+import org.elasticsearch.cluster.metadata.DataStream.TimestampField;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.IndexTemplateMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
@@ -42,6 +43,7 @@ import org.elasticsearch.common.collect.ImmutableOpenMap;
 import org.elasticsearch.common.logging.Loggers;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.time.DateFormatter;
+import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.common.util.concurrent.EsExecutors;
 import org.elasticsearch.common.xcontent.XContentHelper;
 import org.elasticsearch.core.Tuple;
@@ -209,11 +211,8 @@ public class IngestServiceTests extends ESTestCase {
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
         assertThat(ingestService.pipelines().size(), is(0));
 
-        PipelineConfiguration pipeline = new PipelineConfiguration(
-            "_id",
-            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"),
-            XContentType.JSON
-        );
+        PipelineConfiguration pipeline = new PipelineConfiguration("_id", new BytesArray("""
+            {"processors": [{"set" : {"field": "_field", "value": "_value"}}]}"""), XContentType.JSON);
         IngestMetadata ingestMetadata = new IngestMetadata(Collections.singletonMap("_id", pipeline));
         clusterState = ClusterState.builder(clusterState)
             .metadata(Metadata.builder().putCustom(IngestMetadata.TYPE, ingestMetadata))
@@ -269,11 +268,8 @@ public class IngestServiceTests extends ESTestCase {
         assertThat(ingestService.pipelines().get("_id3").pipeline.getId(), equalTo("_id3"));
         assertThat(ingestService.pipelines().get("_id3").pipeline.getProcessors().size(), equalTo(0));
 
-        pipeline3 = new PipelineConfiguration(
-            "_id3",
-            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"),
-            XContentType.JSON
-        );
+        pipeline3 = new PipelineConfiguration("_id3", new BytesArray("""
+            {"processors": [{"set" : {"field": "_field", "value": "_value"}}]}"""), XContentType.JSON);
         ingestMetadata = new IngestMetadata(Map.of("_id1", pipeline1, "_id3", pipeline3));
 
         ingestService.innerUpdatePipelines(ingestMetadata);
@@ -292,11 +288,8 @@ public class IngestServiceTests extends ESTestCase {
 
     public void testDelete() {
         IngestService ingestService = createWithProcessors();
-        PipelineConfiguration config = new PipelineConfiguration(
-            "_id",
-            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"),
-            XContentType.JSON
-        );
+        PipelineConfiguration config = new PipelineConfiguration("_id", new BytesArray("""
+            {"processors": [{"set" : {"field": "_field", "value": "_value"}}]}"""), XContentType.JSON);
         IngestMetadata ingestMetadata = new IngestMetadata(Collections.singletonMap("_id", config));
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build();
         ClusterState previousClusterState = clusterState;
@@ -324,11 +317,8 @@ public class IngestServiceTests extends ESTestCase {
 
     public void testValidateNoIngestInfo() throws Exception {
         IngestService ingestService = createWithProcessors();
-        PutPipelineRequest putRequest = new PutPipelineRequest(
-            "_id",
-            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"),
-            XContentType.JSON
-        );
+        PutPipelineRequest putRequest = new PutPipelineRequest("_id", new BytesArray("""
+            {"processors": [{"set" : {"field": "_field", "value": "_value"}}]}"""), XContentType.JSON);
 
         var pipelineConfig = XContentHelper.convertToMap(putRequest.getSource(), false, putRequest.getXContentType()).v2();
         Exception e = expectThrows(
@@ -422,14 +412,24 @@ public class IngestServiceTests extends ESTestCase {
         assertThat(pipeline, nullValue());
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
 
-        PutPipelineRequest putRequest = new PutPipelineRequest(
-            "_id",
-            new BytesArray(
-                "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag1\"}},"
-                    + "{\"remove\" : {\"field\": \"_field\", \"tag\": \"tag2\"}}]}"
-            ),
-            XContentType.JSON
-        );
+        PutPipelineRequest putRequest = new PutPipelineRequest("_id", new BytesArray("""
+            {
+              "processors": [
+                {
+                  "set": {
+                    "field": "_field",
+                    "value": "_value",
+                    "tag": "tag1"
+                  }
+                },
+                {
+                  "remove": {
+                    "field": "_field",
+                    "tag": "tag2"
+                  }
+                }
+              ]
+            }"""), XContentType.JSON);
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
@@ -455,20 +455,27 @@ public class IngestServiceTests extends ESTestCase {
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build();
         ClusterState previousClusterState = clusterState;
 
-        PutPipelineRequest putRequest1 = new PutPipelineRequest(
-            "_id1",
-            new BytesArray(
-                "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag1\"}},"
-                    + "{\"remove\" : {\"field\": \"_field\", \"tag\": \"tag2\"}}]}"
-            ),
-            XContentType.JSON
-        );
+        PutPipelineRequest putRequest1 = new PutPipelineRequest("_id1", new BytesArray("""
+            {
+              "processors": [
+                {
+                  "set": {
+                    "field": "_field",
+                    "value": "_value",
+                    "tag": "tag1"
+                  }
+                },
+                {
+                  "remove": {
+                    "field": "_field",
+                    "tag": "tag2"
+                  }
+                }
+              ]
+            }"""), XContentType.JSON);
         clusterState = IngestService.innerPut(putRequest1, clusterState);
-        PutPipelineRequest putRequest2 = new PutPipelineRequest(
-            "_id2",
-            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag2\"}}]}"),
-            XContentType.JSON
-        );
+        PutPipelineRequest putRequest2 = new PutPipelineRequest("_id2", new BytesArray("""
+            {"processors": [{"set" : {"field": "_field", "value": "_value", "tag": "tag2"}}]}"""), XContentType.JSON);
         clusterState = IngestService.innerPut(putRequest2, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
 
@@ -505,11 +512,8 @@ public class IngestServiceTests extends ESTestCase {
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build();
         ClusterState previousClusterState = clusterState;
 
-        PutPipelineRequest putRequest1 = new PutPipelineRequest(
-            "_id1",
-            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag1\"}}]}"),
-            XContentType.JSON
-        );
+        PutPipelineRequest putRequest1 = new PutPipelineRequest("_id1", new BytesArray("""
+            {"processors": [{"set" : {"field": "_field", "value": "_value", "tag": "tag1"}}]}"""), XContentType.JSON);
         clusterState = IngestService.innerPut(putRequest1, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
 
@@ -576,11 +580,8 @@ public class IngestServiceTests extends ESTestCase {
         assertThat(pipeline, nullValue());
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
 
-        PutPipelineRequest putRequest = new PutPipelineRequest(
-            id,
-            new BytesArray("{\"processors\": [{\"complexSet\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"),
-            XContentType.JSON
-        );
+        PutPipelineRequest putRequest = new PutPipelineRequest(id, new BytesArray("""
+            {"processors": [{"complexSet" : {"field": "_field", "value": "_value"}}]}"""), XContentType.JSON);
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
@@ -602,11 +603,8 @@ public class IngestServiceTests extends ESTestCase {
         assertThat(pipeline, nullValue());
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
 
-        PutPipelineRequest putRequest = new PutPipelineRequest(
-            id,
-            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"),
-            XContentType.JSON
-        );
+        PutPipelineRequest putRequest = new PutPipelineRequest(id, new BytesArray("""
+            {"processors": [{"set" : {"field": "_field", "value": "_value"}}]}"""), XContentType.JSON);
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
@@ -644,11 +642,8 @@ public class IngestServiceTests extends ESTestCase {
         assertThat(pipeline.getProcessors().size(), equalTo(0));
 
         // overwrite existing pipeline:
-        putRequest = new PutPipelineRequest(
-            id,
-            new BytesArray("{\"processors\": [], \"description\": \"_description\"}"),
-            XContentType.JSON
-        );
+        putRequest = new PutPipelineRequest(id, new BytesArray("""
+            {"processors": [], "description": "_description"}"""), XContentType.JSON);
         previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
@@ -707,7 +702,8 @@ public class IngestServiceTests extends ESTestCase {
     public void testDeleteUsingWildcard() {
         IngestService ingestService = createWithProcessors();
         HashMap<String, PipelineConfiguration> pipelines = new HashMap<>();
-        BytesArray definition = new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}");
+        BytesArray definition = new BytesArray("""
+            {"processors": [{"set" : {"field": "_field", "value": "_value"}}]}""");
         pipelines.put("p1", new PipelineConfiguration("p1", definition, XContentType.JSON));
         pipelines.put("p2", new PipelineConfiguration("p2", definition, XContentType.JSON));
         pipelines.put("q1", new PipelineConfiguration("q1", definition, XContentType.JSON));
@@ -755,7 +751,8 @@ public class IngestServiceTests extends ESTestCase {
     public void testDeleteWithExistingUnmatchedPipelines() {
         IngestService ingestService = createWithProcessors();
         HashMap<String, PipelineConfiguration> pipelines = new HashMap<>();
-        BytesArray definition = new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}");
+        BytesArray definition = new BytesArray("""
+            {"processors": [{"set" : {"field": "_field", "value": "_value"}}]}""");
         pipelines.put("p1", new PipelineConfiguration("p1", definition, XContentType.JSON));
         IngestMetadata ingestMetadata = new IngestMetadata(pipelines);
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build();
@@ -777,11 +774,8 @@ public class IngestServiceTests extends ESTestCase {
 
     public void testDeleteWithIndexUsePipeline() {
         IngestService ingestService = createWithProcessors();
-        PipelineConfiguration config = new PipelineConfiguration(
-            "_id",
-            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"),
-            XContentType.JSON
-        );
+        PipelineConfiguration config = new PipelineConfiguration("_id", new BytesArray("""
+            {"processors": [{"set" : {"field": "_field", "value": "_value"}}]}"""), XContentType.JSON);
         IngestMetadata ingestMetadata = new IngestMetadata(Collections.singletonMap("_id", config));
         Metadata.Builder builder = Metadata.builder();
         for (int i = 0; i < randomIntBetween(2, 10); i++) {
@@ -881,14 +875,24 @@ public class IngestServiceTests extends ESTestCase {
 
     public void testValidate() throws Exception {
         IngestService ingestService = createWithProcessors();
-        PutPipelineRequest putRequest = new PutPipelineRequest(
-            "_id",
-            new BytesArray(
-                "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag1\"}},"
-                    + "{\"remove\" : {\"field\": \"_field\", \"tag\": \"tag2\"}}]}"
-            ),
-            XContentType.JSON
-        );
+        PutPipelineRequest putRequest = new PutPipelineRequest("_id", new BytesArray("""
+            {
+              "processors": [
+                {
+                  "set": {
+                    "field": "_field",
+                    "value": "_value",
+                    "tag": "tag1"
+                  }
+                },
+                {
+                  "remove": {
+                    "field": "_field",
+                    "tag": "tag2"
+                  }
+                }
+              ]
+            }"""), XContentType.JSON);
         var pipelineConfig = XContentHelper.convertToMap(putRequest.getSource(), false, putRequest.getXContentType()).v2();
 
         DiscoveryNode node1 = new DiscoveryNode("_node_id1", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
@@ -1091,11 +1095,8 @@ public class IngestServiceTests extends ESTestCase {
 
     public void testExecuteEmptyPipeline() throws Exception {
         IngestService ingestService = createWithProcessors(emptyMap());
-        PutPipelineRequest putRequest = new PutPipelineRequest(
-            "_id",
-            new BytesArray("{\"processors\": [], \"description\": \"_description\"}"),
-            XContentType.JSON
-        );
+        PutPipelineRequest putRequest = new PutPipelineRequest("_id", new BytesArray("""
+            {"processors": [], "description": "_description"}"""), XContentType.JSON);
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
@@ -1285,8 +1286,11 @@ public class IngestServiceTests extends ESTestCase {
 
     public void testExecuteFailureWithNestedOnFailure() throws Exception {
         final Processor processor = mock(Processor.class);
+        when(processor.isAsync()).thenReturn(true);
         final Processor onFailureProcessor = mock(Processor.class);
+        when(onFailureProcessor.isAsync()).thenReturn(true);
         final Processor onFailureOnFailureProcessor = mock(Processor.class);
+        when(onFailureOnFailureProcessor.isAsync()).thenReturn(true);
         final List<Processor> processors = Collections.singletonList(onFailureProcessor);
         final List<Processor> onFailureProcessors = Collections.singletonList(onFailureOnFailureProcessor);
         final CompoundProcessor compoundProcessor = new CompoundProcessor(
@@ -1357,6 +1361,7 @@ public class IngestServiceTests extends ESTestCase {
         }
 
         CompoundProcessor processor = mock(CompoundProcessor.class);
+        when(processor.isAsync()).thenReturn(true);
         when(processor.getProcessors()).thenReturn(Collections.singletonList(mock(Processor.class)));
         Exception error = new RuntimeException();
         doAnswer(args -> {
@@ -1401,7 +1406,7 @@ public class IngestServiceTests extends ESTestCase {
 
         // Test to make sure that ingest respects content types other than the default index content type
         XContentType xContentType = randomFrom(
-            Arrays.stream(XContentType.values()).filter(t -> Requests.INDEX_CONTENT_TYPE.equals(t) == false).collect(Collectors.toList())
+            Arrays.stream(XContentType.values()).filter(t -> Requests.INDEX_CONTENT_TYPE.equals(t) == false).toList()
         );
 
         logger.info("Using [{}], not randomly determined default [{}]", xContentType, Requests.INDEX_CONTENT_TYPE);
@@ -1421,15 +1426,12 @@ public class IngestServiceTests extends ESTestCase {
             handler.accept(RandomDocumentPicks.randomIngestDocument(random()), null);
             return null;
         }).when(processor).execute(any(), any());
-        Map<String, Processor.Factory> map = new HashMap<>(2);
+        Map<String, Processor.Factory> map = Maps.newMapWithExpectedSize(2);
         map.put("mock", (factories, tag, description, config) -> processor);
 
         IngestService ingestService = createWithProcessors(map);
-        PutPipelineRequest putRequest = new PutPipelineRequest(
-            "_id",
-            new BytesArray("{\"processors\": [{\"mock\": {}}], \"description\": \"_description\"}"),
-            XContentType.JSON
-        );
+        PutPipelineRequest putRequest = new PutPipelineRequest("_id", new BytesArray("""
+            {"processors": [{"mock": {}}], "description": "_description"}"""), XContentType.JSON);
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build();
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
@@ -1462,6 +1464,8 @@ public class IngestServiceTests extends ESTestCase {
         final Processor processorFailure = mock(Processor.class);
         when(processor.getType()).thenReturn("mock");
         when(processor.getTag()).thenReturn("mockTag");
+        when(processor.isAsync()).thenReturn(true);
+        when(processorFailure.isAsync()).thenReturn(true);
         when(processorFailure.getType()).thenReturn("failure-mock");
         // avoid returning null and dropping the document
         doAnswer(args -> {
@@ -1476,7 +1480,7 @@ public class IngestServiceTests extends ESTestCase {
             handler.accept(null, new RuntimeException("error"));
             return null;
         }).when(processorFailure).execute(any(IngestDocument.class), any());
-        Map<String, Processor.Factory> map = new HashMap<>(2);
+        Map<String, Processor.Factory> map = Maps.newMapWithExpectedSize(2);
         map.put("mock", (factories, tag, description, config) -> processor);
         map.put("failure-mock", (factories, tag, description, config) -> processorFailure);
         IngestService ingestService = createWithProcessors(map);
@@ -1576,19 +1580,16 @@ public class IngestServiceTests extends ESTestCase {
         assertPipelineStats(afterThirdRequestStats.getPipelineStats(), "_id1", 2, 0, 0);
         assertPipelineStats(afterThirdRequestStats.getPipelineStats(), "_id2", 1, 0, 0);
         // The number of processors for the "id1" pipeline changed, so the per-processor metrics are not carried forward. This is
-        // due to the parallel array's used to identify which metrics to carry forward. With out unique ids or semantic equals for each
+        // due to the parallel array's used to identify which metrics to carry forward. Without unique ids or semantic equals for each
         // processor, parallel arrays are the best option for of carrying forward metrics between pipeline changes. However, in some cases,
-        // like this one it may not readily obvious why the metrics were not carried forward.
+        // like this one it may not be readily obvious why the metrics were not carried forward.
         assertProcessorStats(0, afterThirdRequestStats, "_id1", 1, 0, 0);
         assertProcessorStats(1, afterThirdRequestStats, "_id1", 1, 0, 0);
         assertProcessorStats(0, afterThirdRequestStats, "_id2", 1, 0, 0);
 
         // test a failure, and that the processor stats are added from the old stats
-        putRequest = new PutPipelineRequest(
-            "_id1",
-            new BytesArray("{\"processors\": [{\"failure-mock\" : { \"on_failure\": [{\"mock\" : {}}]}}, {\"mock\" : {}}]}"),
-            XContentType.JSON
-        );
+        putRequest = new PutPipelineRequest("_id1", new BytesArray("""
+            {"processors": [{"failure-mock" : { "on_failure": [{"mock" : {}}]}}, {"mock" : {}}]}"""), XContentType.JSON);
         previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
@@ -1790,6 +1791,35 @@ public class IngestServiceTests extends ESTestCase {
         assertThat(reference.get(), is(instanceOf(byte[].class)));
     }
 
+    public void testPostIngest() {
+        IngestService ingestService = createWithProcessors(
+            Collections.singletonMap("mock", (factories, tag, description, config) -> mockCompoundProcessor())
+        );
+
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"),
+            XContentType.JSON
+        );
+        ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
+        ClusterState previousClusterState = clusterState;
+        clusterState = IngestService.innerPut(putRequest, clusterState);
+        ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
+
+        BulkRequest bulkRequest = new BulkRequest();
+        IndexRequest indexRequest1 = new IndexRequest("idx").setPipeline("_id")
+            .setFinalPipeline("_id")
+            .source(Map.of(TimestampField.FIXED_TIMESTAMP_FIELD, 10));
+        IndexRequest indexRequest2 = new IndexRequest("idx").setPipeline("_id").setFinalPipeline("_id").source(Map.of("foo", "bar"));
+        bulkRequest.add(indexRequest1);
+        bulkRequest.add(indexRequest2);
+
+        ingestService.executeBulkRequest(2, bulkRequest.requests(), (integer, e) -> {}, (thread, e) -> {}, indexReq -> {}, Names.WRITE);
+
+        assertThat(indexRequest1.getRawTimestamp(), equalTo(10));
+        assertThat(indexRequest2.getRawTimestamp(), nullValue());
+    }
+
     public void testResolveRequiredOrDefaultPipelineDefaultPipeline() {
         IndexMetadata.Builder builder = IndexMetadata.builder("idx")
             .settings(settings(Version.CURRENT).put(IndexSettings.DEFAULT_PIPELINE.getKey(), "default-pipeline"))
@@ -1942,7 +1972,9 @@ public class IngestServiceTests extends ESTestCase {
 
     public void testUpdatingPipelineWithoutChangesIsNoOp() throws Exception {
         var value = randomAlphaOfLength(5);
-        var pipelineString = "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"" + value + "\"}}]}";
+        var pipelineString = """
+            {"processors": [{"set" : {"field": "_field", "value": "%s"}}]}
+            """.formatted(value);
         testUpdatingPipeline(pipelineString);
     }
 
@@ -2171,6 +2203,7 @@ public class IngestServiceTests extends ESTestCase {
 
     private CompoundProcessor mockCompoundProcessor() {
         CompoundProcessor processor = mock(CompoundProcessor.class);
+        doAnswer(args -> true).when(processor).isAsync();
         doAnswer(args -> {
             @SuppressWarnings("unchecked")
             BiConsumer<IngestDocument, Exception> handler = (BiConsumer) args.getArguments()[1];
