@@ -12,7 +12,7 @@ import org.elasticsearch.Version;
 import org.elasticsearch.action.admin.cluster.snapshots.create.CreateSnapshotResponse;
 import org.elasticsearch.action.support.PlainActionFuture;
 import org.elasticsearch.action.support.master.AcknowledgedResponse;
-import org.elasticsearch.client.Client;
+import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.Numbers;
@@ -145,7 +145,7 @@ public class BlobStoreRepositoryTests extends ESSingleNodeTestCase {
             .getSnapshotIds()
             .stream()
             .sorted((s1, s2) -> s1.getName().compareTo(s2.getName()))
-            .collect(Collectors.toList());
+            .toList();
         assertThat(snapshotIds, equalTo(originalSnapshots));
     }
 
